# nuclaw

./: AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY_TEST_REPORT.md  README.md  README_CN.md  ROADMAP.md  TEST_REPORT.md  autoresearch-results.csv  autoresearch-tutorial.md  deploy.sh  install.ps1  install.sh  tarpaulin-report.html  uninstall.sh
docs/: AUDIT_REPORT.md  AUTORESEARCH_GUIDE.md  FULL_QA_AUDIT_REPORT.md  INSTALLATION_TEST_REPORT.md  INSTALL_SCRIPT_AUDIT_REPORT.md  MEMORY_OPTIMIZATION_TEST_REPORT.md  MEMORY_OPTIMIZATION_USER_STORIES.md  MEMORY_SYSTEM_ANALYSIS.md  ONBOARD_GUIDE.md  ONBOARD_TEST_REPORT.md  OPENSPEC_ARCH_REFACTOR_V1.md  OPENSPEC_ARCH_REFACTOR_V2.md  OPENSPEC_ARCH_REFACTOR_V3_USER_STORIES.md  OPENSPEC_ARCH_REFACTOR_V3_WHATSAPP_DISCORD.md  OPENSPEC_CONTEXT_FILE_SYSTEM.md  OPENSPEC_MEMORY_MAINTENANCE.md  OPENSPEC_RUST_CLAUDE_API.md  OPENSPEC_SKILLS_REGISTRY.md  OPENSPEC_SKILL_HOTLOAD.md  OPENSPEC_TELEGRAM_ENHANCEMENT.md  OPENSPEC_TELEGRAM_OPTIMIZATION.md  OPENSPEC_TIERED_MEMORY.md  ORCHESTRATOR_PROPOSAL.md  ORCHESTRATOR_TEST_REPORT.md  P0-container-pooling.md  PER_SESSION_WORKSPACE_INTEGRATION.md  PHASE3_PROPOSAL.md  REFACTORING_PLAN.md  SKILLS_TEST_REPORT.md  SKILL_HOTLOAD_TEST_REPORT.md  TELEGRAM_AUTO_START_SPEC.md  TEST_REPORT.md  TEST_REPORT_ARCH_PHASE1.md  TEST_REPORT_ARCH_PHASE2.md  TEST_REPORT_ARCH_PHASE2_FINAL.md  TEST_REPORT_ARCH_PHASE3.md  USER_MANUAL.md  WEIXIN_SPEC.md  WORKFLOW_PROPOSAL.md  WORKFLOW_TEST_REPORT.md
scripts/: README.launchd.md  com.nuclaw.agent.plist
src/: agent_runner.rs  auth.rs  channels.rs  config.rs  db.rs  (+32 more)
(+73 files in other folders)
